# QTtt

./: .gitignore  CHANGELOG.md  CMakeLists.txt  QTtt.pro  README.md  Ttt.pro  definitions.pri  game.h  libIncludes.pri  mainwindow.h  mainwindow.ui  resources.qrc
.github/workflows/: cd-master.yml  ci-dev.yml  reusable-build.yml
app/: .gitignore  CMakeLists.txt  app.pro  qmake_resources.qrc
app/android/: AndroidManifest.xml  build.gradle  gradle.properties
app/src/: GameView.qml  IconButton.qml  TextAndSpinBox.qml  ViewsComposer.qml  WelcomeView.qml  gamepainteditem.cpp  gamepainteditem.h  gamestatusimageprovider.cpp  gamestatusimageprovider.h  main.cpp  main.qml  settingsproxy.cpp  settingsproxy.h
docs/: QSettingsMap.json
lib/: lib.pro
lib/Directions/: CMakeLists.txt  Directions.pro  directions.cpp  directions.h
lib/GameCore/: CMakeLists.txt  GameCore.pro  gamecore.cpp  gamecore.h
src/: game.cpp  game.h  gamePaintedItem.cpp  gamePaintedItem.h  gamepainteditem.cpp  gamepainteditem.h  imagecell.cpp  imagecell.h  main.cpp  main.qml  mainwindow.cpp
tests/: test_game.cpp  test_game.h  tests.pro
tests/TestDirections/: .gitignore  CMakeLists.txt  TestDirections.cpp  TestDirections.h  TestDirections.pro
tests/TestGameCore/: .gitignore  CMakeLists.txt  TestGameCore.cpp  TestGameCore.pro  target_wrapper.sh
